[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/BossRed.gd" type="Script" id=1]
[ext_resource path="res://Enemies/baseEnemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/BossRed.tres" type="SpriteFrames" id=3]

[sub_resource type="CircleShape2D" id=8]
radius = 13.0024

[sub_resource type="CircleShape2D" id=9]
radius = 13.0024

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 26 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14, 3 )

[node name="enemy" instance=ExtResource( 2 )]
collision_mask = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" parent="." index="0"]
frames = ExtResource( 3 )
animation = "attack"

[node name="mapCollider" parent="." index="1"]
shape = SubResource( 8 )

[node name="collider" parent="hitbox" index="0"]
visible = false
shape = SubResource( 9 )

[node name="ChargeUp" type="Timer" parent="." index="6"]
one_shot = true

[node name="BossStompHitbox" type="Area2D" parent="." index="7" groups=["enemy"]]
visible = false

[node name="stomp" type="CollisionShape2D" parent="BossStompHitbox" index="0"]
visible = false
shape = SubResource( 2 )

[node name="aimTime" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true

[node name="StompDur" type="Timer" parent="." index="9"]
wait_time = 2.0
one_shot = true

[node name="stunDur" type="Timer" parent="." index="10"]
wait_time = 5.0
one_shot = true

[node name="mapCollider2" type="Area2D" parent="." index="11"]
collision_layer = 0

[node name="collider" type="CollisionShape2D" parent="mapCollider2" index="0"]
position = Vector2( -1, -9 )
shape = SubResource( 6 )

[node name="chargeCol" type="Timer" parent="." index="12"]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="ChargeUp" to="." method="_on_ChargeUp_timeout"]
[connection signal="timeout" from="aimTime" to="." method="_on_aimTime_timeout"]
[connection signal="timeout" from="StompDur" to="." method="_on_StompDur_timeout"]
[connection signal="timeout" from="stunDur" to="." method="_on_stunDur_timeout"]
[connection signal="body_entered" from="mapCollider2" to="." method="_on_mapCollider2_body_entered"]
[connection signal="timeout" from="chargeCol" to="." method="_on_chargeCol_timeout"]
